plugins/devkit/testData/inspections/registrationProblems/code/MyAbstractAction.java
public abstract class <error descr="Plugin component class must not be abstract">MyAbstractAction</error> extends com.intellij.openapi.actionSystem.AnAction {}